# ptemcee-bilby

./: CONTRIBUTORS.md  README.md  pyproject.toml
src/ptemcee_bilby/: __init__.py  sampler.py  utils.py
tests/: test_bilby_integration.py  test_sampler_class.py  test_utils.py
