[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ptemcee-bilby"
authors = [
    {name = "Colm Talbot", email = "colm.talbot@ligo.org"},
    {name = "Michael J. Williams", email = "michael.williams@ligo.org"},
]
description = "Plugin for using ptemcee with bilby."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bilby>=2.3.0",
    "ptemcee",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "bilby>=2.7.0",
]

[tool.setuptools_scm]

[project.entry-points."bilby.samplers"]
ptemcee = "ptemcee_bilby.sampler:Ptemcee"
